	<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.rockit</groupId>

	<artifactId>test.rockitizer</artifactId>

	<version>0.0.7-mq9-SNAPSHOT</version>


	<distributionManagement>


			<repository>

				<id>rockit-release</id>

				<url>http://poiradar.rockit.local:8082/artifactory/libs-release-local</url>

			</repository>


		<snapshotRepository>

			<id>rockit-snapshot</id>

			<url>http://poiradar.rockit.local:8082/artifactory/libs-snapshot-local</url>

		</snapshotRepository>

	</distributionManagement>


	<build>


		<plugins>


			<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-compiler-plugin</artifactId>

				<version>3.1</version>


					<configuration>

						<source>1.7</source>

						<target>1.7</target>

					</configuration>

			</plugin>


			<plugin>

				<artifactId>maven-assembly-plugin</artifactId>


				<configuration>


					<descriptorRefs>

						<descriptorRef>jar-with-dependencies</descriptorRef>

					</descriptorRefs>

				</configuration>

			</plugin>


			<plugin>

				<groupId>org.jacoco</groupId>

				<artifactId>jacoco-maven-plugin</artifactId>

				<version>0.7.8-SNAPSHOT</version>

			</plugin>


			<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-surefire-plugin</artifactId>

				<version>2.19.1</version>


				<configuration>

					<testFailureIgnore>true</testFailureIgnore>

					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>

				</configuration>

			</plugin>

		</plugins>

	</build>


	<dependencies>


		<dependency>

			<groupId>org.apache.httpcomponents</groupId>

			<artifactId>httpclient</artifactId>

			<version>4.5</version>

			<type>jar</type>

		</dependency>


		<dependency>

			<groupId>junit</groupId>

			<artifactId>junit</artifactId>

			<version>4.11</version>

		</dependency>


		<dependency>

			<groupId>com.googlecode.java-diff-utils</groupId>

			<artifactId>diffutils</artifactId>

			<version>1.2.1</version>

		</dependency>


		<dependency>

			<groupId>org.xmlunit</groupId>

			<artifactId>xmlunit-core</artifactId>

			<version>2.1.0</version>

		</dependency>


		<dependency>

			<groupId>commons-io</groupId>

			<artifactId>commons-io</artifactId>

			<version>2.4</version>

		</dependency>


		<dependency>

			<groupId>commons-httpclient</groupId>

			<artifactId>commons-httpclient</artifactId>

			<version>3.1</version>

		</dependency>


		<dependency>

			<groupId>xerces</groupId>

			<artifactId>xercesImpl</artifactId>

			<version>2.8.0</version>

		</dependency>


		<dependency>

			<groupId>xalan</groupId>

			<artifactId>xalan</artifactId>

			<version>2.7.1</version>

		</dependency>

		<dependency>

			<groupId>com.google.guava</groupId>
	
			<artifactId>guava</artifactId>

			<version>27.0-jre</version>

		</dependency>

	<!-- 19.0-rc2 -->



		<dependency>

			<groupId>log4j</groupId>

			<artifactId>log4j</artifactId>

			<version>1.2.17</version>

		</dependency>


		<dependency>

			<groupId>commons-configuration</groupId>

			<artifactId>commons-configuration</artifactId>

			<version>1.10</version>

		</dependency>


		<dependency>

			<groupId>org.json</groupId>

			<artifactId>json</artifactId>

			<version>20160810</version>

		</dependency>


		<dependency>

			<groupId>com.jcraft</groupId>

			<artifactId>jsch</artifactId>

			<version>0.1.54</version>

		</dependency>


		<dependency>

			<groupId>org.codehaus.groovy</groupId>

			<artifactId>groovy</artifactId>

			<version>2.4.7</version>

		</dependency>


		<dependency>

			<groupId>com.google.code.gson</groupId>

			<artifactId>gson</artifactId>

			<version>2.8.5</version>

		</dependency>


		<dependency>

			<groupId>io.fares.junit.soapui</groupId>

			<artifactId>soapui-junit-mockrunner-tests</artifactId>

			<version>0.0.3</version>

		</dependency>

	<!-- Non-free libs start -->


	<!-- Non-free MQ start -->



		<dependency>

			<groupId>com.ibm.mq</groupId>

			<artifactId>mq</artifactId>
	
			<version>9.3</version>

		</dependency>


		<dependency>

			<groupId>com.ibm.mq</groupId>

			<artifactId>allclient</artifactId>

			<version>9.3</version>

		</dependency>


		<dependency>

			<groupId>com.ibm.mq</groupId>

			<artifactId>jmqi</artifactId>

			<version>9.3</version>

		</dependency>


		<dependency>

			<groupId>com.ibm.mq</groupId>

			<artifactId>commonservices</artifactId>

			<version>9.3</version>

		</dependency>


		<dependency>

			<groupId>com.ibm.mq</groupId>

			<artifactId>headers</artifactId>

			<version>9.3</version>

		</dependency>


		<dependency>

			<groupId>com.ibm.mq</groupId>

			<artifactId>pcf</artifactId>

			<version>9.3</version>

		</dependency>

	<!-- Non-free MQ end -->


	<!-- Non-free DB start -->
	


		<dependency>
		
			<groupId>com.oracle</groupId>

			<artifactId>ojdbc6</artifactId>

			<version>11.0</version>

		</dependency>


		<dependency>

			<groupId>com.ibm.db2</groupId>

			<artifactId>db2jcc4</artifactId>

			<version>11.1</version>

		</dependency>

	<!-- Non-free MQ end -->
	

	<!-- Non-free libs end -->
		

	</dependencies>

	</project>